--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="super-contenedor">
         <div class="lado-izquierdo">
-            <img src="/Images/Logo.png" alt="Logo" class="logo-chido">
+            <img src="Logo.png" alt="Logo" class="logo-chido">
             <textarea id="texto-entrada" placeholder="Pon tu texto secreto aquí"></textarea>
             <p class="aviso-peque">⚠️ Solo letras minúsculas y sin acentos, porfa!</p>
             <div class="botones-cool">
@@ -19,7 +19,7 @@
         </div>
         <div class="lado-derecho">
             <div class="contenido-derecho">
-                <img src="/Images/Muñeco.png" alt="Muñeco" id="imagen-muneco">
+                <img src="Muñeco.png" alt="Muñeco" id="imagen-muneco">
                 <h2 class="mensaje-vacio">Ups! Nada por aquí</h2>
                 <p class="subtitulo-vacio">Escribe algo para encriptar o desencriptar!</p>
                 <textarea id="texto-salida" readonly class="oculto"></textarea>
